# diagrams-generator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: generate-diagrams.yml
diagram_generator/: generator.py  utils.py
diagrams/: helm-charts.py
diagrams/examples/: on-prem-web-service-advanced.py  rabbitmq-k8s-db.py
diagrams/examples/aws/: aws-clustered-web-services.py  aws-event-processing.py  aws-workers.py
diagrams/examples/gcp/: gcp-event-collecting.py
diagrams/examples/k8s/: k8s-exposed-3-replicas.py  k8s-stateful-architecture.py
output_diagrams/: helm-charts.dot
