[tool.poetry]
name = "diagram-generator"
version = "0.1.0"
description = "Generate diagrams using diagrams library."
authors = ["alexbaeza"]
readme = "README.md"
packages = [
    {include = "diagram_generator"}
]
[tool.poetry.dependencies]
python = "^3.12"
diagrams = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate = "diagram_generator.generator:main"
